<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cap_page">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="414dp"
        android:layout_height="204dp"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textCappage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcome_to_cap_page"
            android:textColor="@color/neon_pink"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.981"
            app:layout_constraintStart_toEndOf="@+id/imagearrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091"
            app:tint="@color/neon_pink" />

        <ImageView
            android:id="@+id/imagearrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.088"
            app:tint="@color/neon_pink" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="368dp"
            android:layout_height="59dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.84">

            <EditText
                android:layout_width="316dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="@string/search_elements"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/search_icon_background"
                android:contentDescription="@string/cappage"
                android:padding="6dp"
                android:src="@drawable/ic_search"
                app:tint="@color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="415dp"
        android:layout_height="622dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayoutHeader"
        app:layout_constraintVertical_bias="0.9"
        tools:ignore="NotSibling">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="237dp">


            <ImageView
                android:id="@+id/imageaddpurplecap"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginEnd="72dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add_circle_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.977"
                app:layout_constraintStart_toEndOf="@+id/imageaddwhitecap"
                app:layout_constraintTop_toBottomOf="@+id/layoutPurplecap"
                app:tint="@color/neon_pink"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/layoutWhitecap"
                android:layout_width="168dp"
                android:layout_height="191dp"
                android:layout_marginTop="28dp"
                android:background="#CDCCC8"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="M, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="97dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/cap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/white_cap"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="143dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="RM 15.00"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="italic" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPurplecap"
                android:layout_width="170dp"
                android:layout_height="191dp"
                android:layout_marginTop="28dp"
                android:background="#CDCCC8"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="M, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.889"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="97dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/purplecap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/purple_cap"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="143dp"
                    android:layout_height="23dp"
                    android:gravity="center"
                    android:text="RM 15.00"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="366dp"
                android:layout_height="69dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/trending_background"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.53"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageaddtocartcap">

                <TextView
                    android:id="@+id/textTrending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/white"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/trending"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_favorite_border"
                    app:layout_constraintBottom_toBottomOf="@id/textTrending"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textTrending"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="161dp"
                    android:layout_height="25dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="End-to-end encryption"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.344"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="7dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageaddwhitecap"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="72dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add_circle_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutWhitecap"
                app:tint="@color/neon_pink"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageaddmug"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add_circle_outline"
                app:layout_constraintTop_toBottomOf="@+id/layoutDarkgraycap"
                app:tint="@color/neon_pink"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="172dp" />

            <ImageView
                android:id="@+id/imageaddtocartcap"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_shopping_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.924"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageaddmug"
                app:tint="@color/neon_pink"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/layoutDarkgraycap"
                android:layout_width="170dp"
                android:layout_height="191dp"
                android:layout_marginTop="272dp"
                android:background="#CDCCC8"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="129dp"
                    android:layout_height="97dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/darkgraycap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dark_gray_cap"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="143dp"
                    android:layout_height="23dp"
                    android:gravity="center"
                    android:text="RM 15.00"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>